--- a/src/Experiments/Online_forest.ipynb
+++ b/src/Experiments/Online_forest.ipynb
@@ -32,7 +32,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "batch_num = 8\n",
@@ -43,6 +45,9 @@
     "\n",
     "names = [str(x) for x in range(elem_num)] +[\"label\"]\n",
     "forest = pd.read_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/forest/type1test.csv\",names=names,skiprows=step_num*init_wins)\n",
+    "forest_tmp = forest[70000:270000]\n",
+    "forest = pd.concat((forest[:70000],forest[270000:]),axis=0)\n",
+    "forest = pd.concat((forest,forest_tmp),axis=0)\n",
     "batches = forest.shape[0]//step_num//batch_num\n",
     "test_set = forest.iloc[:batches*batch_num*step_num,:-1]\n",
     "labels =forest.iloc[:batches*batch_num*step_num,-1]\n",
@@ -163,7 +168,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(7,) (7, 7) 0.0148115\n"
+      "(7,) (7, 7) 0.00652888\n"
      ]
     }
    ],
@@ -302,9 +307,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -314,14 +326,35 @@
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-30-b706f5d52383>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     43\u001b[0m                 \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m                     \u001b[1;31m#print(\"FP\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 45\u001b[1;33m                     \u001b[0merr_nbuf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     46\u001b[0m                     \u001b[1;31m#err_nbuf = err_nbuf + e[index] if len(err_nbuf) != 0 else e[index]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m                     \u001b[0mn_buf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "200\n",
+      "300\n",
+      "400\n",
+      "500\n",
+      "600\n",
+      "700\n",
+      "800\n",
+      "900\n",
+      "1000\n",
+      "1100\n",
+      "1200\n",
+      "1300\n",
+      "1400\n",
+      "1500\n",
+      "1600\n",
+      "1700\n",
+      "1800\n",
+      "1900\n",
+      "2000\n",
+      "2100\n",
+      "2200\n",
+      "2300\n",
+      "2400\n",
+      "2500\n",
+      "retrain at 2524 batch\n"
      ]
     }
    ],
@@ -332,71 +365,90 @@
     "\n",
     "y = []\n",
     "output=[]\n",
-    "box = []\n",
     "err_nbuf = []\n",
     "err_abuf = []\n",
     "all_scores = []\n",
     "\n",
+    "start_time = time.time()\n",
     "for l in labels:\n",
     "    if l == \"normal\":\n",
     "        y +=[0]\n",
     "    else: \n",
     "        y +=[1]\n",
     "for data in test_set_list:\n",
-    "    \n",
+    "        if count % 100 == 0:\n",
+    "            print(count)\n",
+    "            \n",
     "        prediction = []\n",
     "        df = local_preprocessing(data)\n",
     "        (input_n, output_n) = sess.run([input_, output_], {p_input: df, p_is_training: False})\n",
     "\n",
     "        err = abs(input_n-output_n).reshape(-1,elem_num)\n",
     "        \n",
-    "        box.append(err.reshape(-1,))\n",
-    "        \n",
-    "        scores = scoring(err,mu,sigma)\n",
-    "        scores = pd.Series(scores)\n",
+    "  \n",
+    "        scores = scoring(err,mu,sigma) # (8*30,)\n",
+    "        #scores = pd.Series(scores)\n",
     "        \n",
     "        all_scores.append(scores)\n",
-    "        output +=  [np.array(heapq.nlargest(10,scores)).mean()]\n",
-    "#        output += [scores.max()]\n",
-    "        pred = [scores[b*step_num:(b+1)*step_num] for b in range(batch_num)]\n",
-    "        label = [expert[count*batch_num+b]for b in range(batch_num)]\n",
-    "        e = [err.reshape(-1,elem_num)]\n",
-    "        for index,value in enumerate(pred):\n",
-    "            if value[value>threshold].size>=5: \n",
+    "        output +=  [np.array(heapq.nlargest(10,ss)).mean() for ss in np.array(scores).reshape(batch_num,step_num)]\n",
+    "#        output += [ss.max() for ss in np.array(scores).reshape(batch_num,step_num)]\n",
+    "        pred = [scores[b*step_num:(b+1)*step_num] for b in range(batch_num)]  # (8,30)\n",
+    "        \n",
+    "        label = [expert[count*batch_num+b] for b in range(batch_num)]\n",
+    "        e = err\n",
+    "        \n",
+    "#       for index,value in enumerate(pd.DataFrame(pred)):\n",
+    "        for i in range(pd.DataFrame(pred).shape[0]):#loop batch_num\n",
+    "            index = i\n",
+    "            value=pd.DataFrame(pred).iloc[i,:]\n",
+    "            \n",
+    "            if value[value>threshold].size>=1: \n",
     "                if label[index] == \"anomaly\":\n",
     "                    #print(\"TP\")                 \n",
-    "                    a_buf.append(df[index])\n",
-    "                    err_abuf.append(e[index])\n",
-    "                    #err_abuf = err_abuf + e[index] if len(err_abuf) != 0 else e[index]\n",
+    "                    a_buf += [df[index,x,:] for x in range(step_num)]\n",
+    "                    #err_abuf.append(e[index*step_num:(index+1)*step_num])\n",
+    "                    err_abuf = np.concatenate((err_abuf , e[index*step_num:(index+1)*step_num]),axis=0) if len(err_abuf) != 0 else e[index*step_num:(index+1)*step_num]\n",
     "                else:\n",
     "                    #print(\"FP\")\n",
-    "                    err_nbuf.append(e[index])\n",
-    "                    #err_nbuf = err_nbuf + e[index] if len(err_nbuf) != 0 else e[index]\n",
-    "                    n_buf.append(df[index])\n",
+    "                    #err_nbuf.append(e[index])\n",
+    "                    err_nbuf =np.concatenate((err_nbuf , e[index*step_num:(index+1)*step_num]),axis=0) if len(err_nbuf) != 0 else e[index*step_num:(index+1)*step_num]\n",
+    "                    \n",
+    "                    n_buf += [df[index,x,:] for x in range(step_num)]\n",
     "            else:               \n",
     "                if label[index] == \"anomaly\":             \n",
     "                    #print(\"FN\")\n",
-    "                    a_buf.append(df[index])\n",
-    "                    err_abuf.append(e[index])\n",
-    "                    #err_abuf = err_abuf + e[index] if len(err_abuf) != 0 else e[index]\n",
+    "                    a_buf += [df[index,x,:] for x in range(step_num)]\n",
+    "                    #err_abuf.append(e[index])\n",
+    "                    err_abuf = np.concatenate((err_abuf , e[index*step_num:(index+1)*step_num]),axis=0) if len(err_abuf) != 0 else e[index*step_num:(index+1)*step_num]\n",
     "                else:\n",
-    "                    err_nbuf.append(e[index])\n",
-    "                    #err_nbuf = err_nbuf + e[index] if len(err_nbuf) != 0 else e[index]\n",
+    "                    \n",
+    "                    #err_nbuf.append(e[index])\n",
+    "                    err_nbuf = np.concatenate((err_nbuf , e[index*step_num:(index+1)*step_num]),axis=0) if len(err_nbuf) != 0 else e[index*step_num:(index+1)*step_num]\n",
     "                    #print(\"TN\")\n",
     "        count +=1\n",
     "        \n",
-    "\n",
-    "        if count in [2000,5300]:\n",
-    "#        if len(n_buf)>=1000 and len(a_buf)>=20:\n",
+    "        \n",
+    "        #n_buf = list(np.concatenate(n_buf,axis=0)) if len(n_buf) != 0 else list(n_buf)\n",
+    "        #a_buf = list(np.concatenate(a_buf,axis=0)) if len(a_buf) != 0 else list(a_buf)\n",
+    "        \n",
+    "        if len(n_buf)>=batch_num*step_num*100 and len(a_buf) !=0:\n",
+    "            while (len(a_buf) < batch_num*step_num):\n",
+    "                a_buf += a_buf\n",
+    "            \n",
+    "            B = len(n_buf) //(batch_num*step_num)\n",
+    "            n_buf = n_buf[:batch_num*step_num*B]\n",
+    "            A = len(a_buf)//(batch_num*step_num)\n",
+    "            a_buf = a_buf[:batch_num*step_num*A]\n",
+    "            \n",
     "            print(\"retrain at %d batch\"%count)\n",
     "            loss_list_all=[]\n",
     "\n",
-    "            datalist = np.array(n_buf[:6]).reshape(-1,batch_num,step_num,elem_num)\n",
-    "            validation_list_n = np.array(n_buf[6:]).reshape(-1,batch_num,step_num,elem_num)\n",
+    "            #datalist = np.array(n_buf).reshape(-1,batch_num,step_num,elem_num)\n",
+    "            datalist = np.array(n_buf[:batch_num*step_num*(B-1)]).reshape(-1,batch_num,step_num,elem_num)\n",
+    "            validation_list_n = np.array(n_buf[batch_num*step_num*(B-1):]).reshape(-1,batch_num,step_num,elem_num)\n",
     "            validation_list_a = np.array(a_buf).reshape(-1,batch_num,step_num,elem_num)\n",
     "            \n",
-    "            for i in range(50):\n",
-    "                \n",
+    "            for i in range(30):\n",
     "                loss_list=[]\n",
     "                for data in datalist:\n",
     "                    (loss, _) = sess.run([loss_, train_], {p_input: data,p_is_training : True})\n",
@@ -404,41 +456,26 @@
     "                #print('Retrain-iter %d:' % (i + 1), np.array(loss_list).mean())\n",
     "                loss_list_all.append( np.array(loss_list).mean()) \n",
     "            \n",
+    "            #err_nbuf_tmp = np.array(err_nbuf).reshape(-1,elem_num)\n",
+    "            #mu,sigma = get_musigma(err_nbuf_tmp,mu,sigma)   \n",
     "\n",
-    "            err_nbuf_tmp = np.array(err_nbuf).reshape(-1,elem_num)\n",
-    "            mu,sigma = get_musigma(err_nbuf_tmp,mu,sigma)\n",
+    "      \n",
     "\n",
-    "            normal_score = []\n",
-    "            abnormal_score = []\n",
-    "            \n",
-    "            for val in validation_list_n:\n",
-    "                (ein,aus) = sess.run([input_,output_], {p_input: val,p_is_training :False})\n",
-    "                \n",
-    "                err = abs(ein-aus).reshape(-1,elem_num)\n",
-    "        \n",
-    "                normal_score +=scoring(err,mu,sigma)\n",
-    "            \n",
-    "            for val_a in validation_list_a:\n",
-    "                (ein,aus) = sess.run([input_,output_], {p_input: val_a,p_is_training :False})\n",
-    "                \n",
-    "                err = abs(ein-aus).reshape(-1,elem_num)\n",
-    "        \n",
-    "                abnormal_score +=scoring(err,mu,sigma)\n",
-    "            \n",
-    "            threshold = get_threshold(normal_score, abnormal_score)\n",
-    "        \n",
-    "            print(\"Parameters updated!\")\n",
+    "            print(\"Parameters updated! new threshold %.3f\"%threshold)\n",
     "            pd.Series(loss_list_all).plot(title=\"Loss\")\n",
     "            n_buf = []\n",
     "            a_buf = []\n",
     "            err_buf = []\n",
+    "            err_nbuf = []\n",
+    "            err_abuf = []\n",
     "                \n",
     "fpr, tpr, thresholds = metrics.roc_curve(expert, output, pos_label=\"anomaly\")\n",
     "auc = metrics.auc(fpr, tpr)\n",
     "#print(fpr,tpr,thresholds,auc)\n",
     "plot_roc(fpr,tpr,auc)\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n",
+    "print(\"--- Initialization time: %s seconds ---\" % (time.time() - start_time))"
    ]
   },
   {
