--- a/Thesis/content/7_conclusion.tex
+++ b/Thesis/content/7_conclusion.tex
@@ -3,3 +3,5 @@
 
 
 
+Anomaly detection attract more and more attention in the data mining field and have been applied to plenty of industrial use cases, which achieved perfect effectiveness and avoids large amount of financial spending. At the same time, the industrial applications need critically anomaly detection models under the big data background, specifically, ability to deal with high-volume, high-velocity data. In this paper, we proposed an adaptive LSTMs-autoencoder for streaming data anomaly detection. In the previous works, autoencoders are widely used in NLP tasks, e.g. language translation, sentence understanding. Vanilla autoencoders and deep autoencoders are also have been used to anomaly detection based on reconstruction error. \cite{encdecad} is the first work that use LSTMs-autoencoder for anomaly detection, with concentration to protection of temporal dependency between time series data. Our work uses similar LSTMs-autoencoder architecture, and enable the model to work with streaming data, and update model according to criterions. Our model shows good performance in detecting anomalies and outperforms the stationary model with the online updating setting.\\
+In terms of streaming data anomaly detection, we mainly focus on the concept drift over steam and model reinforcement by the last seen data. In the experiment with SMTP+HTTP dataset, our model shows robustness against sudden concept drift and adjusted the new data distribution very quickly. In the experiment with FOREST dataset, the model masters serried and slight concept drifts also well. We also demonstrated an intuitive model online learning process with the small Power Demand dataset. The run time of adaptive models are significantly higher than stationary models due to the long model retraining time and the retraining data collection process.
